--- a/src/artboard/.components.css
+++ b/src/artboard/.components.css
@@ -1,7 +1,11 @@
-.block {
+.block-front {
   position: relative;
   background-color: blue;
   border: 1px solid white;
+}
+
+.block-front-layer {
+  position: absolute;
 }
 
 .building {
