--- a/src/panel/Panel.module.css
+++ b/src/panel/Panel.module.css
@@ -25,8 +25,23 @@
   box-shadow: var(--shadow-layer-1);
 }
 
-.main * {
+.package * {
   pointer-events: auto;
+}
+
+.button {
+  cursor: pointer;
+  background-color: white;
+  border: 1px solid var(--text-gray);
+  border-radius: 0.3rem;
+}
+
+.button:hover {
+  background-color: var(--fade-gray);
+}
+
+.button:active {
+  background-color: var(--light-gray);
 }
 
 .toggle {
