--- a/src/styles/panel/Panel.module.css
+++ b/src/styles/panel/Panel.module.css
@@ -18,11 +18,13 @@
 
 .main {
   width: clamp(20%, 20rem, 100%);
-  height: 20vh;
+  height: 50vh;
   display: flex;
   background-color: white;
   border-radius: 5px;
+  border: 1px solid var(--light-gray);
   box-shadow: var(--shadow-layer-1);
+  padding: 0.4rem;
 }
 
 .package * {
@@ -34,6 +36,7 @@
   background-color: white;
   border: 1px solid var(--text-gray);
   border-radius: 0.3rem;
+  height: 1.5rem;
 }
 
 .button:hover {
@@ -48,4 +51,19 @@
   display: flex;
   align-items: center;
   width: 6.5rem;
+}
+
+.buttonGroup {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.itemGroup {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+}
+
+.subtitle {
+  color: var(--hero-reg);
 }
