--- a/src/styles/panel/Panel.module.css
+++ b/src/styles/panel/Panel.module.css
@@ -7,7 +7,7 @@
   height: calc(100% - var(--nav-height));
   display: flex;
   flex-direction: column;
-  gap: 3px;
+  gap: 5px;
 }
 
 @media only screen and (max-width: 500px) {
@@ -20,11 +20,12 @@
   width: clamp(20%, 20rem, 100%);
   height: 50vh;
   display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
   background-color: white;
   border-radius: 5px;
   border: 1px solid var(--light-gray);
-  box-shadow: var(--shadow-layer-1);
-  padding: 0.4rem;
+  padding: 0.6rem;
 }
 
 .package * {
@@ -50,7 +51,8 @@
 .toggle {
   display: flex;
   align-items: center;
-  width: 6.5rem;
+  padding: 0.2rem;
+  width: fit-content;
 }
 
 .buttonGroup {
