--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -23,6 +23,7 @@
 }
 
 .title {
+  font-size: 2rem;
   line-height: 0.7;
   margin: 0;
 }
@@ -36,4 +37,5 @@
 
 .subtitle {
   font-size: 1rem;
+  margin: 0;
 }
