--- a/src/styles/panel/Panel.module.css
+++ b/src/styles/panel/Panel.module.css
@@ -33,19 +33,16 @@
 }
 
 .button {
-  cursor: pointer;
-  background-color: white;
-  border: 1px solid var(--text-gray);
-  border-radius: 0.3rem;
-  height: 1.5rem;
+  font-size: 0.9rem;
+  padding: 0.3rem;
+  width: 5rem;
+  color: white;
 }
 
 .button:hover {
-  background-color: var(--fade-gray);
-}
-
-.button:active {
-  background-color: var(--light-gray);
+  background-color: var(--hero-reg);
+  color: white;
+  border-color: var(--hero-reg);
 }
 
 .toggle {
