--- a/src/styles/panel/SchemeSetter.module.css
+++ b/src/styles/panel/SchemeSetter.module.css
@@ -1,13 +1,15 @@
 .layer {
   height: 2rem;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .layerName {
   font-size: 0.85rem;
   display: flex;
   justify-content: space-between;
+  width: 6rem;
 }
 
 .buttonGroup {
