--- a/src/styles/panel/SchemeSetter.module.css
+++ b/src/styles/panel/SchemeSetter.module.css
@@ -1,13 +1,12 @@
 .layer {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  gap: 0.5rem;
 }
 
 .layerName {
   font-size: 0.85rem;
   display: flex;
-  justify-content: space-between;
   width: 6rem;
   font-weight: 700;
 }
@@ -15,6 +14,8 @@
 .buttonGroup {
   display: flex;
   gap: 0.3rem;
+  flex-grow: 1;
+  justify-content: flex-end;
 }
 
 .actionButton {
@@ -25,6 +26,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .actionButton * {
   font-size: 0.9rem;
 }
@@ -33,6 +35,44 @@
   width: 7rem;
 }
 
-.numberSetter > .form-floating > label {
-  padding: 0;
+.numberSetterSmall {
+  width: 5.5rem;
+  height: 1.4rem;
+}
+
+.numberSetterSmall * {
+  font-size: 0.75rem !important;
+  height: 1.4rem;
+}
+
+.block {
+  display: flex;
+  gap: 0.5rem;
+  padding-left: 1rem;
+  font-size: 0.8rem;
+}
+
+.block * {
+  font-size: 0.75rem;
+}
+
+.selector {
+  width: 6.5rem;
+  background-position: right 0.2rem center;
+  height: 1.4rem;
+  padding: 0 0.3rem;
+}
+
+.dropdownToggle {
+  padding: 0.1rem 0.3rem;
+  width: 2.5rem;
+}
+
+.dropdownItem {
+  display: flex;
+  gap: 1rem;
+}
+
+.dropdownItem:focus {
+  background-color: var(--hero-reg);
 }
